--- a/README.html
+++ b/README.html
@@ -229,6 +229,40 @@
           <dl>
             <dt>Solr setup (search handler clustering query-in-context snippets)</dt>
             <dd>
+              <p>To configure clustering to use query-in-context snippets instead of full field content,
+              pass <code>xxx</code> attribute in Solr's handler configuration, as shown below:</p>
+
+              <pre class="escape prettyprint">
+                <requestHandler name="/config2_1" class="solr.SearchHandler">
+                  <lst name="defaults">
+                    <str name="defType">edismax</str>
+                    <str name="qf">
+                      title^1.5 content^1.0
+                    </str>
+                    <str name="rows">100</str>
+
+                    <str name="fl">name,title,score</str>
+
+                    <bool name="clustering">true</bool>
+                    <bool name="clustering.results">true</bool>
+                    <str  name="clustering.engine">default</str>
+
+                    <!-- field mapping -->
+                    <str  name="carrot.url">name</str>
+                    <str  name="carrot.title">title</str>
+                    <str  name="carrot.snippet">content</str>
+
+                    <!-- enable clustering on highlighted fragments only. -->
+                    <str name="carrot.produceSummary">true</str>
+                    <!-- take a max. of 3 fragments from each document's match. -->
+                    <str name="carrot.summarySnippets">3</str>
+                  </lst>
+
+                  <arr name="last-components">
+                    <str>clustering</str>
+                  </arr>
+                </requestHandler>
+              </pre>
 
               <p>
                 Compare the difference in processing time (<code>QTime</code>) on the server for the configuration
